<resources>
    <string name="app_name">MyCar</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register New User</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="action_signout">Sign out</string>
    <!-- Strings related to app -->
    <string name="action_upload_data">Upload Data from app</string>
    <string name="action_switch_car">Switch car</string>
    <string name="action_fuel_consumption">Fuel consumption</string>
    <string name="action_transaction_list">Transaction list</string>
    <string name="action_modify_car">Modify car</string>
    <string name="action_modify_material">Modify material</string>
    <string name="action_modify_partner">Modify partner</string>
    <string name="action_valuation">Valuation</string>
    <string name="action_list">List</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="cardialog_delete_title">Remove car</string>
    <string name="cardialog_delete_message">Are you sure you want to remove this car and all related transactions?</string>
    <string name="default_carname">Car name goes here</string>
    <string name="default_platenumber">Licence plate number goes here</string>
    <string name="cardetail_name">MyCar - Car Details</string>
    <string name="cardetail_carname">Car name</string>
    <string name="cardialog_carname_hint">Enter car name</string>
    <string name="cardetail_platenumber">Licence plate number</string>
    <string name="cardialog_platenumber_hint">Enter licence plate number</string>
    <string name="cardetail_country">Registration country</string>
    <string name="cardialog_country_hint">choose country</string>
    <string name="cardetail_currency">default currency</string>
    <string name="cardialog_currency_hint">choose currency</string>
    <string name="cardetail_distanceunit">display distance in unit</string>
    <string name="cardialog_distanceunit_hint">choose unit of measure</string>
    <string name="cardetail_fueleconomy">display fuel economy in unit</string>
    <string name="cardialog_fueleconomy_hint">choose unit of measure</string>
    <string name="cardetail_fuelmaterial">fuel material</string>
    <string name="cardialog_fuelmaterial_hint">choose default fuel</string>
    <string name="cardetail_fuelunit">fuel unit</string>
    <string name="cardialog_fuelunit_hint">choose fuel unit</string>
    <string name="cardetail_odometerunit">odometer unit</string>
    <string name="cardialog_odometerunit_hint">choose odometer unit</string>
    <string name="cardetail_carimageurl">car image URL</string>
    <string name="cardialog_carimageurl_hint">Enter car image URL</string>
    <string name="cardialog_title_add">Add a new car</string>
    <string name="cardialog_title_edit">Edit car details</string>
    <string name="content_car_image">car photo</string>
    <string name="carlist_title">Select a car</string>
    <string name="materialdetail_name">MyCar - Material Details</string>
    <string name="transactions_name">MyCar - Transactions</string>
    <string name="default_description">description goes here</string>
    <string name="default_date">date goes here</string>
    <string name="default_partner">partner name goes here</string>
    <string name="default_value">currency value goes here</string>
    <string name="transactiondetail_name">MyCar - Transaction Details</string>
    <string name="transactiondialog_material">Material</string>
    <string name="transactiondialog_material_hint">choose material</string>
    <string name="transactiondialog_description">Description</string>
    <string name="transactiondialog_description_hint">Enter description</string>
    <string name="transactiondialog_docdate">Document date</string>
    <string name="transactiondialog_odometer">Odometer status</string>
    <string name="transactiondialog_odometer_hint">enter odometer</string>
    <string name="transactiondialog_partner">Partner</string>
    <string name="transactiondialog_partner_hint">choose partner</string>
    <string name="transactiondialog_quantity">Quantity</string>
    <string name="transactiondialog_quantity_hint">1</string>
    <string name="transactiondialog_quantityuom_hint">1</string>
    <string name="transactiondialog_price">Price</string>
    <string name="transactiondialog_price_hint">enter price</string>
    <string name="transactiondialog_validfrom">Start of validity</string>
    <string name="transactiondialog_validitylength">Length validity</string>
    <string name="transactiondialog_validitylength_hint">1</string>
    <string name="transactiondialog_vallengthuom_hint">year</string>
    <string name="transactiondialog_title_add">Add a new transaction</string>
    <string name="transactiondialog_title_edit">Edit transaction details</string>
    <string name="home_fueleconomy">average fuel consumption</string>
</resources>

