<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityCarDetail"
    tools:showIn="@layout/activity_cardetail"
    android:padding="6dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardetail_carname" />

    <TextView
        android:id="@+id/cardetail_carname_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/cardialog_carname_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardetail_platenumber" />

    <TextView
        android:id="@+id/cardetail_platenumber_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cardialog_platenumber_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardetail_carimageurl" />

    <TextView
        android:id="@+id/cardetail_carimageurl_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardialog_carimageurl_hint"
        android:textSize="10sp" />
</LinearLayout>