<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityHome"
    tools:showIn="@layout/activity_home"
    android:padding="20dp">

    <TextView
        android:id="@+id/home_carname_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/cardialog_carname_hint"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/home_car_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:onClick="callActivityCarDetail"
        android:contentDescription="@string/content_car_image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardetail_platenumber" />
    <TextView
        android:id="@+id/home_platenumber_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/cardialog_platenumber_hint"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fueleconomy" />

    <TextView
        android:id="@+id/home_fueleconomy_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="7.45 L/100km"
        android:textSize="16sp" />

</LinearLayout>