<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.ruszkipista.mycar.ActivityTransactionDetail">
    <item
        android:id="@+id/action_list_transaction"
        android:orderInCategory="100"
        android:title="@string/action_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_modify_transaction"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_transaction"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />
</menu>